# freshman-focus-checks

./: .gitignore  pyproject.toml
freshman_focus_checks/: main.py
freshman_focus_checks/checks/: style.css
freshman_focus_checks/templates/: check_template.html
