[tool.poetry]
name = "freshman-focus-checks"
version = "0.1.0"
description = ""
authors = ["Travis Ormsby <travis.ormsby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
